<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="162dp"
        android:layout_height="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fireButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/fire" />

        <Button
            android:id="@+id/relayButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/check_relay" />

        <Button
            android:id="@+id/chargeButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/charge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="398dp"
        android:layout_height="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/coilTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/coil_adjuster"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/coilSeekBar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:max="510"
            android:progress="255" />

        <TextView
            android:id="@+id/angleTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/angle_adjuster"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/angleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:max="1023"
            android:progress="0" />

        <TextView
            android:id="@+id/directionTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/direction_adjuster"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/directionSeekBar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:max="511"
            android:progress="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="576dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <SeekBar
            android:id="@+id/lmSeekBar"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:max="510"
            android:progress="255" />

        <TextView
            android:id="@+id/motorTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/motor_control"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/rmSeekBar"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:max="510"
            android:progress="255"
            android:rotation="180" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>



